--- a/econom-tour-2021/styles/main.css
+++ b/econom-tour-2021/styles/main.css
@@ -2,3 +2,68 @@ html {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+.inform {
+    float: right;
+    margin: 0 1.5%;
+    width: 63%
+}
+
+#nav {
+    float: right;
+    margin: 0 1.5%;
+    width: 15%;
+    background: rgb(182, 179, 179);
+    padding: 2px 10px;
+}
+
+#formoftour {
+    border: 2px solid black;
+}
+
+#request {
+    color: rgb(46, 109, 228);
+    font-size: large;
+    font-weight: 500;
+    text-align: center;
+}
+
+#dopinfo {
+    font-size: smaller;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+}
+
+#form {
+    margin: 0px 10px 5px;
+}
+
+footer p {
+    background: rgb(116, 113, 113);
+    clear: both;
+    text-align: center;
+    height: 34px;
+    padding-top: 13px;
+    color: white;
+    width: 100%;
+}
+
+.meteoprog-informer {
+    float: left;
+}
+
+#mainheader {
+    width: 100%;
+    text-align: center;
+}
+
+section p {
+    text-indent: 16px;
+}
+
+button {
+    margin-left: 30%;
+    width: 40%;
+    text-align: center;
+}
