--- a/econom-tour-2021/styles/main.css
+++ b/econom-tour-2021/styles/main.css
@@ -3,17 +3,22 @@ html {
 }
 
 .inform {
-    float: right;
+    float: left;
     margin: 0 1.5%;
-    width: 63%
+    width: 82%;
+}
+
+.nav-zay {
+    word-spacing: 4px !important;
 }
 
 #nav {
-    float: right;
-    margin: 0 1.5%;
-    width: 15%;
-    background: rgb(182, 179, 179);
-    padding: 2px 10px;
+    float: center;
+    color: rgb(47, 47, 71);
+    text-align: center;
+    font-size: larger;
+    word-spacing: 25px;
+    font-weight: bolder;
 }
 
 #formoftour {
@@ -40,7 +45,7 @@ html {
 }
 
 footer p {
-    background: rgb(116, 113, 113);
+    background: #b4b6b5;
     clear: both;
     text-align: center;
     height: 34px;
@@ -50,12 +55,13 @@ footer p {
 }
 
 .meteoprog-informer {
-    float: left;
+    float: right;
 }
 
-#mainheader {
+.mainheader {
     width: 100%;
     text-align: center;
+    background: no-repeat center/80% url("images\header\header.jpg") yellow;
 }
 
 section p {
@@ -66,4 +72,12 @@ button {
     margin-left: 30%;
     width: 40%;
     text-align: center;
+}
+
+.count-list {
+    padding: 10px 150px 40px;
+}
+
+.sign {
+    float: left;
 }
