--- a/econom-tour-2021/styles/main.css
+++ b/econom-tour-2021/styles/main.css
@@ -60,8 +60,12 @@ footer p {
 
 .mainheader {
     width: 100%;
+    height: 150px;
     text-align: center;
-    background: no-repeat center/80% url("images\header\header.jpg") yellow;
+    background: no-repeat center/100% url(/images/header/header.jpg) yellow;
+    display: inline-block;
+    vertical-align: middle;
+    padding-top: 65px;
 }
 
 section p {
@@ -80,4 +84,5 @@ button {
 
 .sign {
     float: left;
+    text-align: center;
 }
