--- a/econom-tour-2021/styles/main.css
+++ b/econom-tour-2021/styles/main.css
@@ -62,7 +62,7 @@ footer p {
     width: 100%;
     height: 150px;
     text-align: center;
-    background: no-repeat center/100% url(/images/header/header.jpg) yellow;
+    background: no-repeat center/100% url(/images/header/header.jpg) rgb(160, 160, 160);
     display: inline-block;
     vertical-align: middle;
     padding-top: 65px;
